--- a/src/resources/views/home.handlebars
+++ b/src/resources/views/home.handlebars
@@ -1,1 +1,13 @@
-<h1>Hello</h1>
+<div class="container">
+    <form method="POST" action="">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="text" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="text" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
